# pico-synth

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pico_sdk_import.cmake  synth.hpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  audio.cpp  audio.hpp  display.cpp  display.hpp  font.hpp  interrupts.cpp  interrupts.hpp  knobs.cpp  knobs.hpp  main.cpp  pins.hpp  raspberry.h  screen.cpp  screen.hpp  switch.cpp  switch.hpp  synth.cpp  synth.hpp  tiny3x3a.hpp
